tup/parse/testdata/error/review/type_declarations.tup
# missing type body
Point = type

error: expecting "tuple type", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:13

# unclosed tuple type
Point = type (x: Float,

error: expecting "field name", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:24

# type keyword not followed by tuple body
Shape = type Circle | Triangle |

error: expecting "tuple type", got "Circle"
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:14

# union type missing variant after pipe
Shape = Circle | Triangle |

error: expecting "union member", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:28

# tuple type mixed labeled and unlabeled members
Point = type (name: String, Int)

error: expecting "field name", got "Int"
--> /home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:29
